# Retail-PL-Analyzer

./: .env.example  .gitignore  README.md  generate_synthetic_data.py  main.py  pyproject.toml  requirements.txt
agent/: pl_agent.py
api/: main.py
dashboard/: dashboard.py
data/sample/: dim_categorias.csv  dim_tiendas.csv  gastos_operativos.csv  pl_consolidado.csv  ventas_por_categoria.csv
pl_model/: pl_engine.py
